syntax = "proto3";

package ride;

service RideService {
  rpc GetRide (GetRideRequest) returns (RideResponse);
  rpc CreateRide (CreateRideRequest) returns (RideResponse);
  rpc UpdateRideStatus (UpdateRideStatusRequest) returns (RideResponse);
}

message GetRideRequest {
  string rideId = 1;
}

message CreateRideRequest {
  string userId = 1;
  string driverId = 2;
  string pickupLocation = 3;
  string dropoffLocation = 4;
}

message UpdateRideStatusRequest {
  string rideId = 1;
  string status = 2;
}

message RideResponse {
  string rideId = 1;
  string userId = 2;
  string driverId = 3;
  string pickupLocation = 4;
  string dropoffLocation = 5;
  string status = 6;
}
